--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "url": "https://github.com/mattcreager"
   },
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "botkit": "0.0.7",
-    "dotenv": "^2.0.0",
+    "body-parser": "^1.18.2",
+    "botkit": "^0.6.4",
+    "dotenv": "^4.0.0",
     "express": "^4.13.4",
     "express-http-proxy": "^0.6.0",
     "github-trending": "^1.3.1",
     "lodash": "^4.6.1",
-    "slack": "^6.1.0"
+    "slack": "^9.0.5"
   },
   "keywords": [
     "slack",
