--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/mattcreager"
   },
   "dependencies": {
+    "@slack/client": "^3.14.1",
     "body-parser": "^1.18.2",
     "botkit": "^0.6.4",
     "dotenv": "^4.0.0",
