using only @slack/client

--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
   "dependencies": {
     "@slack/client": "^3.14.1",
     "body-parser": "^1.18.2",
-    "botkit": "^0.6.4",
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
     "express-http-proxy": "^0.6.0",
-    "lodash": "^4.6.1",
-    "slack": "^9.0.5"
+    "lodash": "^4.6.1"
   },
   "keywords": [
     "slack",
