--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
     "express-http-proxy": "^0.6.0",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "string-table": "^0.1.5"
   },
   "keywords": [
     "slack",
