--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.4",
     "express-http-proxy": "^0.6.0",
     "lodash": "^4.6.1",
+    "standard": "^10.0.3",
     "string-table": "^0.1.5"
   },
   "keywords": [
