added sequelize with models

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "express": "^4.13.4",
     "express-http-proxy": "^0.6.0",
     "lodash": "^4.6.1",
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.13.17",
     "standard": "^10.0.3",
     "string-table": "^0.1.5"
   },
@@ -31,5 +34,8 @@
     "bot",
     "heroku"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "sequelize-cli": "^3.0.0"
+  }
 }
